kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  labels:
    name: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      restartPolicy: Always
      containers:
        - image: tfeK8sSample.azurecr.io/sample-app
          imagePullPolicy: IfNotPresent
          name: sample-app
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 8080
