kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-svc
  labels:
    service: sample-app-svc
spec:
  selector:
    app: sample-app
  ports:
    - name: "http-port"
      port: 8080
      targetPort: 8080
